# claude-history

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
claude_history/: __init__.py  _analysis.py  _pandas.py  _session.py  corpus.py  models.py  parser.py
docs/superpowers/plans/: 2026-07-01-claude-history.md
docs/superpowers/specs/: 2026-07-01-claude-history-design.md
tests/: test_analysis.py  test_corpus.py  test_models.py  test_pandas.py  test_parser.py  test_public_api.py  test_session.py
tests/fixtures/: list_tool_result.jsonl  malformed.jsonl  sidechain.jsonl  simple.jsonl  unknown_content.jsonl
