[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-history"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["claude_history"]
